# dbow_testing

DBoW2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo_metrics  latest_dbow2_eroc_voc.txt
DBoW2/demo/: demo_metrics.cpp
DBoW2/include/DBoW2/: TemplatedVocabulary.h
DBoW2/src/: ScoringObject.cpp
DBow3/: CMakeCache.txt  CMakeLists.txt  FindDBoW3.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  fbow_large_k9l5.fbow
DBow3/src/: Makefile  Vocabulary.h  cmake_install.cmake  libDBoW3.so.0.0.1
DBow3/tests/: CMakeLists.txt  time_metrics.cpp
DBow3/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  create_voc_step0  create_voc_step1  demo_general  latest_demo  time_metrics  time_metrics.cpp
fbow/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  fbowConfig.cmake  testing_ORBvoc.fbow
fbow/src/: Makefile  cmake_install.cmake  fbow.cpp  fbow.h  libfbow.so.0.0.1  vocabulary_creator.cpp  vocabulary_creator.h
fbow/tests/: CMakeCache.txt  CMakeLists.txt  Makefile  ORBvoc.txt  cmake_install.cmake  comparison_tests  comparison_tests.cpp  dbow2_eroc_voc.yml  dbow2fbow.cpp  fbow_small_voc.txt  fbow_test_cpu_x86  fbow_test_dbow2VSfbow  outTest.fbow  output3.fbow  testing.txt
fbow/tests/dbow2/: TemplatedVocabulary.h
fbow/tests/dbow3/: Vocabulary.h
fbow/utils/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fbow_create_voc_step0  fbow_create_voc_step0_list  fbow_create_voc_step1  fbow_demo  fbow_demo.cpp  fbow_transform  image_matching  outdoor_k9l7.fbow  output3.fbow  vocab
fbow/vocabularies/: testing_ORBvoc.fbow
